--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -465,6 +465,54 @@
 }
 .casestudy-dropdown-item:hover { background: #f5f5f5; }
 .casestudy-dropdown-item svg { width: 16px; height: 16px; color: #7c3aed; }
+/* Behind the Scenes Section */
+.behind-scenes {
+  margin-top: 2rem;
+}
+.behind-scenes-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 1.5rem;
+  margin-top: 1.5rem;
+}
+.behind-scenes-card {
+  background: white;
+  border-radius: 16px;
+  overflow: hidden;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.06);
+  border: 1px solid rgba(0,0,0,0.04);
+}
+.behind-scenes-card img {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+}
+.behind-scenes-card.single {
+  max-width: 500px;
+  margin: 0 auto;
+}
+.behind-scenes-info {
+  padding: 1.25rem;
+}
+.behind-scenes-info h4 {
+  font-family: var(--font-display);
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
+  color: var(--color-text);
+}
+.behind-scenes-info p {
+  font-size: 0.9rem;
+  color: var(--color-text-secondary);
+  line-height: 1.6;
+}
+.behind-scenes-caption {
+  font-style: italic;
+  font-size: 0.85rem;
+  color: #7c3aed;
+  margin-top: 0.75rem;
+  padding-top: 0.75rem;
+  border-top: 1px solid #f0f0f0;
+}
 </style>
 </head>
 <body>
@@ -595,7 +643,20 @@
             <span class="tag">Brand Building</span>
           </div>
         </div>
-
+<div class="content-section behind-scenes">
+          <h2 class="content-title">Behind the Scenes</h2>
+          <p class="content-body">My entrepreneurial foundation started here—building a business while raising a young family. Four kids under five at a grand opening? That was just Tuesday for us.</p>
+          <div class="behind-scenes-grid">
+            <div class="behind-scenes-card single">
+              <img src="images/GrandOpeningFebruary1999.jpg" alt="Grand Opening February 1999">
+              <div class="behind-scenes-info">
+                <h4>Where It All Started</h4>
+                <p>Grand opening ribbon cutting, February 1999. That's my husband holding our 4th child, born just weeks earlier. Entrepreneurship doesn't wait for convenient timing.</p>
+                <div class="behind-scenes-caption">"Four kids under five and opening a business. That's the foundation everything else was built on."</div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="cta-section">
           <a href="index.html#work" class="btn-cta">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>
