--- a/xacteched-campaign.html
+++ b/xacteched-campaign.html
@@ -605,7 +605,34 @@
   padding-top: 0.75rem;
   border-top: 1px solid #f0f0f0;
 } 
-
+/* Logo Cards */
+.logo-card {
+  background: white;
+  border-radius: 12px;
+  padding: 1.5rem;
+  box-shadow: 0 2px 12px rgba(0,0,0,0.04);
+  border: 1px solid rgba(0,0,0,0.04);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.logo-card img {
+  max-height: 120px;
+  max-width: 100%;
+  object-fit: contain;
+  margin-bottom: 1rem;
+}
+.logo-card h4 {
+  font-family: var(--font-display);
+  font-size: 1rem;
+  margin: 0.5rem 0 0.25rem;
+}
+.logo-card p {
+  font-size: 0.85rem;
+  color: var(--color-text-secondary);
+  margin: 0;
+}
 </style>
 </head>
 <body>
